Updated frontend and race directory script for proper deployment

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="ultralogo.jpg" alt="Ultramarathon Finder Logo" class="logo">
+        <img src="images/ultramarathon_images/ultralogo.jpg" alt="Ultramarathon Finder Logo" class="logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="race_directory.html">Race Directory</a>
@@ -43,8 +43,8 @@
                     <img src="images/ultramarathon_images/ultra_trail.jpg" alt="Ultramarathon Trail">
                 </div>
             </div>
-            <button class="carousel-control-prev" onclick="prevSlide()">&#10094;</button>
-            <button class="carousel-control-next" onclick="nextSlide()">&#10095;</button>
+            <button class="carousel-control-prev" onclick="prevSlide()">➜10094;</button>
+            <button class="carousel-control-next" onclick="nextSlide()">➜10095;</button>
         </div>
 
         <!-- Welcome Section -->
