--- a/frontend/race_directory.html
+++ b/frontend/race_directory.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Race Directory - Ultramarathon Finder</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="frontend/style.css"> <!-- Update to reflect directory structure -->
 </head>
 <body>
     <header>
-        <img src="ultralogo.jpg" alt="Ultramarathon Finder Logo" class="logo">
+        <img src="frontend/ultralogo.jpg" alt="Ultramarathon Finder Logo" class="logo"> <!-- Update path to reflect directory structure -->
         <nav>
             <a href="index.html">Home</a>
             <a href="race_directory.html">Race Directory</a>
@@ -16,7 +16,7 @@
             <a href="training_tips.html">Training Tips</a>
             <a href="gear_forum.html">Gear Recommendations</a>
             <a href="race_experiences.html">Race Experiences</a>
-            <a href="account.html">Account</a> <!-- New Account link -->
+            <a href="account.html">Account</a>
         </nav>
     </header>
     <main>
@@ -44,6 +44,6 @@
         <p>&copy; 2024 Ultramarathon Finder. All rights reserved.</p>
         <p><a href="#">Contact Us</a> | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
     </footer>
-    <script src="race_directory_script.js"></script>
+    <script src="frontend/race_directory_script.js"></script> <!-- Update path to reflect directory structure -->
 </body>
 </html>
