Updated training tips forum, gear forum, account page fixes, and other enhancements

--- a/frontend/race_directory.html
+++ b/frontend/race_directory.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Race Directory - Ultramarathon Finder</title>
-    <link rel="stylesheet" href="frontend/style.css"> <!-- Update to reflect directory structure -->
+    <link rel="stylesheet" href="style.css"> <!-- No need to include "frontend/" since this HTML should be in "frontend/" -->
 </head>
 <body>
     <header>
-        <img src="frontend/ultralogo.jpg" alt="Ultramarathon Finder Logo" class="logo"> <!-- Update path to reflect directory structure -->
+        <img src="ultralogo.jpg" alt="Ultramarathon Finder Logo" class="logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="race_directory.html">Race Directory</a>
@@ -44,6 +44,6 @@
         <p>&copy; 2024 Ultramarathon Finder. All rights reserved.</p>
         <p><a href="#">Contact Us</a> | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
     </footer>
-    <script src="frontend/race_directory_script.js"></script> <!-- Update path to reflect directory structure -->
+    <script src="race_directory_script.js"></script>
 </body>
 </html>
