--- a/frontend/training_tips.html
+++ b/frontend/training_tips.html
@@ -42,6 +42,6 @@
     </footer>
 
     <!-- Include JavaScript file -->
-    <script src="training_tips.js"></script>
+    <script src="training_tips.js"></script> <!-- Update the path if needed -->
 </body>
 </html>
