--- a/frontend/login.html
+++ b/frontend/login.html
@@ -37,7 +37,7 @@
             const password = document.getElementById('password').value;
 
             try {
-                const response = await fetch('http://localhost:5001/api/auth/login', {
+                const response = await fetch('https://ultra-finder-backend-f3b8ba349529.herokuapp.com/api/auth/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
