--- a/frontend/profile_edit.html
+++ b/frontend/profile_edit.html
@@ -49,7 +49,7 @@
             }
 
             try {
-                const response = await fetch('http://localhost:5001/api/auth/account', {
+                const response = await fetch('https://ultra-finder-backend-f3b8ba349529.herokuapp.com/api/auth/account', {
                     method: 'GET',
                     headers: {
                         Authorization: `Bearer ${token}`,
@@ -89,7 +89,7 @@
             }
 
             try {
-                const response = await fetch('http://localhost:5001/api/auth/account', {
+                const response = await fetch('https://ultra-finder-backend-f3b8ba349529.herokuapp.com/api/auth/account', {
                     method: 'PUT',
                     headers: {
                         Authorization: `Bearer ${token}`,
