--- a/frontend/account.html
+++ b/frontend/account.html
@@ -7,51 +7,70 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Ultramarathon Finder</h1>
+    <header class="sticky-header">
+        <div class="logo-container">
+            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
+        </div>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="race_directory.html">Race Directory</a>
-            <a href="community.html">Community</a>
-            <a href="training_tips.html">Training Tips</a>
-            <a href="gear_forum.html">Gear Recommendations</a> <!-- New tab -->
-            <a href="race_experiences.html">Race Experiences</a>
-            <a href="account.html">Account</a>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="race_directory.html">Race Directory</a></li>
+                <li class="dropdown">
+                    <a href="community.html">Community</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="gear_forum.html">Gear Forum</a></li>
+                        <li><a href="race_experiences.html">Race Experiences</a></li>
+                        <li><a href="training_tips.html">Training Tips Forum</a></li>
+                    </ul>
+                </li>
+                <li id="account-tab"></li>
+            </ul>
         </nav>
     </header>
 
-    <div class="container" id="account-container">
-        <h2>Your Account</h2>
-        <div id="account-info" class="info-section">
-            <!-- User information will be dynamically added here -->
-        </div>
-        <p id="error-message" class="error-message" style="display: none;">Error fetching account info.</p>
-
-        <div class="account-links">
-            <button onclick="window.location.href='profile_edit.html'">Edit Profile</button>
-            <button id="logout-button">Log Out</button>
-        </div>
-    </div>
+    <main>
+        <section class="account-container">
+            <div class="account-card">
+                <div class="profile-section">
+                    <img id="profile-pic" src="images/default-profile.png" alt="User Profile Picture" class="profile-pic">
+                    <label for="upload-input" class="upload-btn">Upload Profile Photo</label>
+                    <input type="file" id="upload-input" accept="image/*" style="display: none;">
+                </div>
+                <div class="info-section">
+                    <h3 id="username">Welcome, User!</h3>
+                    <p id="email"><strong>Email:</strong> user@example.com</p>
+                </div>
+            </div>
+            <div class="account-actions">
+                <button class="orange-btn" onclick="window.location.href='profile_edit.html'">Edit Profile</button>
+                <button class="orange-btn" onclick="window.location.href='activity.html'">View Activities</button>
+                <button class="orange-btn" id="logout-button">Log Out</button>
+            </div>
+        </section>
+    </main>
 
     <footer>
         <p>&copy; 2024 Ultramarathon Finder. All rights reserved.</p>
+        <p>
+            <a href="contact.html">Contact Us</a> | 
+            <a href="privacy.html">Privacy Policy</a> | 
+            <a href="terms.html">Terms of Service</a> | 
+            <a href="about.html">About Us</a> | 
+            <a href="faq.html">FAQ</a>
+        </p>
     </footer>
 
     <script>
         async function fetchAccountInfo() {
             const token = localStorage.getItem('token');
-
             if (!token) {
-                document.getElementById('error-message').textContent = 'You are not logged in.';
-                document.getElementById('error-message').style.display = 'block';
-                setTimeout(() => {
-                    window.location.href = 'login.html';
-                }, 2000);
+                alert("You are not logged in. Redirecting to login...");
+                window.location.href = 'login.html';
                 return;
             }
 
             try {
-                const response = await fetch('https://ultra-finder-backend-f3b8ba349529.herokuapp.com/api/auth/account', {
+                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/account', {
                     method: 'GET',
                     headers: {
                         Authorization: `Bearer ${token}`,
@@ -61,32 +80,68 @@
 
                 if (response.ok) {
                     const { user } = await response.json();
-                    const accountInfo = `
-                        <h3>Welcome, ${user.username}!</h3>
-                        <p><strong>Email:</strong> ${user.email}</p>
-                    `;
-                    document.getElementById('account-info').innerHTML = accountInfo;
+                    document.getElementById('username').textContent = `Welcome, ${user.username}!`;
+                    document.getElementById('email').textContent = `Email: ${user.email}`;
+                    if (user.profilePicture) {
+                        document.getElementById('profile-pic').src = user.profilePicture;
+                    }
                 } else {
-                    const data = await response.json();
-                    console.error('Error fetching account info:', data.message || 'Unknown error');
-                    document.getElementById('error-message').textContent =
-                        data.message || 'Error fetching account info. Please log in again.';
-                    document.getElementById('error-message').style.display = 'block';
+                    console.error("Error fetching account info:", await response.text());
+                    alert("Error fetching account info. Redirecting to login...");
                     localStorage.removeItem('token');
-                    setTimeout(() => {
-                        window.location.href = 'login.html';
-                    }, 2000);
+                    window.location.href = 'login.html';
                 }
             } catch (error) {
-                console.error('Error fetching account info:', error);
-                document.getElementById('error-message').textContent = 'Error fetching account info.';
-                document.getElementById('error-message').style.display = 'block';
+                console.error("Error fetching account info:", error);
+                alert("Error fetching account info. Please try again.");
             }
         }
 
+        document.getElementById('upload-input').addEventListener('change', async (e) => {
+            const file = e.target.files[0];
+            if (!file) {
+                console.log("No file selected");
+                return;
+            }
+
+            const formData = new FormData();
+            formData.append('profilePicture', file);
+
+            const token = localStorage.getItem('token');
+            if (!token) {
+                alert("You are not logged in. Redirecting to login...");
+                window.location.href = 'login.html';
+                return;
+            }
+
+            try {
+                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/upload-profile-picture', {
+                    method: 'POST',
+                    headers: {
+                        Authorization: `Bearer ${token}`,
+                    },
+                    body: formData,
+                });
+
+                if (response.ok) {
+                    const { profilePicture } = await response.json();
+                    document.getElementById('profile-pic').src = profilePicture;
+                    alert("Profile picture updated successfully!");
+                } else {
+                    const errorData = await response.text();
+                    console.error("Error uploading profile picture:", errorData);
+                    alert("Error uploading profile picture. Please try again.");
+                }
+            } catch (error) {
+                console.error("Error uploading profile picture:", error);
+                alert("Error uploading profile picture. Please try again.");
+            }
+        });
+
         document.getElementById('logout-button').addEventListener('click', () => {
             localStorage.removeItem('token');
-            window.location.href = 'logout.html';
+            alert("You have successfully logged out.");
+            window.location.href = 'login.html';
         });
 
         fetchAccountInfo();
