--- a/frontend/gear_forum.html
+++ b/frontend/gear_forum.html
@@ -7,16 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img src="ultralogo.jpg" alt="Ultramarathon Finder Logo" class="logo">
+    <header class="sticky-header">
+        <div class="logo-container">
+            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
+        </div>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="race_directory.html">Race Directory</a>
-            <a href="community.html">Community</a>
-            <a href="training_tips.html">Training Tips</a>
-            <a href="gear_forum.html">Gear Recommendations</a>
-            <a href="race_experiences.html">Race Experiences</a>
-            <a href="account.html">Account</a>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="race_directory.html">Race Directory</a></li>
+                <li class="dropdown">
+                    <a href="community.html">Community</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="gear_forum.html">Gear Forum</a></li>
+                        <li><a href="race_experiences.html">Race Experiences</a></li>
+                        <li><a href="training_tips.html">Training Tips Forum</a></li>
+                    </ul>
+                </li>
+                <li id="account-tab"></li>
+            </ul>
         </nav>
     </header>
 
@@ -37,11 +45,16 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Ultramarathon Finder. All rights reserved.</p>
-        <p><a href="#">Contact Us</a> | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+        <p>&copy; 2024 Ultramarathon Connect. All rights reserved.</p>
+        <p>
+            <a href="contact.html">Contact Us</a> | 
+            <a href="privacy.html">Privacy Policy</a> | 
+            <a href="terms.html">Terms of Service</a> | 
+            <a href="about.html">About Us</a> | 
+            <a href="faq.html">FAQ</a>
+        </p>
     </footer>
 
-    <!-- Include JavaScript file -->
     <script src="gear_forum.js"></script>
 </body>
 </html>
