--- a/frontend/race_directory.html
+++ b/frontend/race_directory.html
@@ -4,21 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Race Directory - Ultramarathon Finder</title>
-    <link rel="stylesheet" href="style.css"> <!-- No need to include "frontend/" since this HTML should be in "frontend/" -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img src="ultralogo.jpg" alt="Ultramarathon Finder Logo" class="logo">
+    <header class="sticky-header">
+        <div class="logo-container">
+            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo">
+        </div>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="race_directory.html">Race Directory</a>
-            <a href="community.html">Community</a>
-            <a href="training_tips.html">Training Tips</a>
-            <a href="gear_forum.html">Gear Recommendations</a>
-            <a href="race_experiences.html">Race Experiences</a>
-            <a href="account.html">Account</a>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="race_directory.html">Race Directory</a></li>
+                <li class="dropdown">
+                    <a href="community.html">Community</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="gear_forum.html">Gear Forum</a></li>
+                        <li><a href="race_experiences.html">Race Experiences</a></li>
+                        <li><a href="training_tips.html">Training Tips Forum</a></li>
+                    </ul>
+                </li>
+                <li id="account-tab"></li>
+            </ul>
         </nav>
     </header>
+
     <main>
         <section class="directory-section">
             <h2>Race Directory</h2>
@@ -40,10 +49,18 @@
             <div id="pagination-controls" class="pagination-controls"></div>
         </section>
     </main>
+
     <footer>
         <p>&copy; 2024 Ultramarathon Finder. All rights reserved.</p>
-        <p><a href="#">Contact Us</a> | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+        <p>
+            <a href="contact.html">Contact Us</a> | 
+            <a href="privacy.html">Privacy Policy</a> | 
+            <a href="terms.html">Terms of Service</a> | 
+            <a href="about.html">About Us</a> | 
+            <a href="faq.html">FAQ</a>
+        </p>
     </footer>
+
     <script src="race_directory_script.js"></script>
 </body>
 </html>
