--- a/frontend/profile_edit.html
+++ b/frontend/profile_edit.html
@@ -31,6 +31,15 @@
     <main>
         <div class="container">
             <h2>Update Your Information</h2>
+            <div class="profile-image-container">
+                <img id="profile-pic" src="images/default-profile.png" alt="Profile Picture" class="profile-img">
+                <form id="upload-form" enctype="multipart/form-data">
+                    <input type="file" id="profile-picture" name="profile-picture" accept="image/*">
+                    <button type="button" onclick="uploadProfilePicture()">Upload Picture</button>
+                </form>
+                <p id="upload-message" class="success-message" style="display: none;"></p>
+            </div>
+
             <form id="profile-form">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
@@ -89,7 +98,7 @@
             }
 
             try {
-                const response = await fetch('https://ultra-finder-backend.onrender.com/api/auth/account', {
+                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/account', {
                     method: 'GET',
                     headers: {
                         Authorization: `Bearer ${token}`,
@@ -101,6 +110,7 @@
                     const { user } = await response.json();
                     document.getElementById('username').value = user.username || '';
                     document.getElementById('email').value = user.email || '';
+                    document.getElementById('profile-pic').src = user.profilePicture || 'images/default-profile.png';
                 } else {
                     document.getElementById('error-message').textContent = 'Error loading profile information. Redirecting to login...';
                     document.getElementById('error-message').style.display = 'block';
@@ -129,7 +139,7 @@
             }
 
             try {
-                const response = await fetch('https://ultra-finder-backend.onrender.com/api/auth/account', {
+                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/account', {
                     method: 'PUT',
                     headers: {
                         Authorization: `Bearer ${token}`,
@@ -158,6 +168,44 @@
                 document.getElementById('error-message').textContent = 'Error updating profile. Please try again.';
                 document.getElementById('error-message').style.display = 'block';
                 document.getElementById('success-message').style.display = 'none';
+            }
+        }
+
+        // Upload profile picture
+        async function uploadProfilePicture() {
+            const token = localStorage.getItem('token');
+            const profilePicture = document.getElementById('profile-picture').files[0];
+
+            if (!token || !profilePicture) {
+                document.getElementById('upload-message').textContent = 'Please select a file to upload.';
+                document.getElementById('upload-message').style.display = 'block';
+                return;
+            }
+
+            const formData = new FormData();
+            formData.append('profile-picture', profilePicture);
+
+            try {
+                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/upload-profile-picture', {
+                    method: 'POST',
+                    headers: {
+                        Authorization: `Bearer ${token}`,
+                    },
+                    body: formData,
+                });
+
+                if (response.ok) {
+                    document.getElementById('upload-message').textContent = 'Profile picture uploaded successfully!';
+                    document.getElementById('upload-message').style.display = 'block';
+                    loadProfile(); // Refresh profile picture
+                } else {
+                    document.getElementById('upload-message').textContent = 'Error uploading profile picture.';
+                    document.getElementById('upload-message').style.display = 'block';
+                }
+            } catch (error) {
+                console.error('Error uploading profile picture:', error);
+                document.getElementById('upload-message').textContent = 'Error uploading profile picture. Please try again.';
+                document.getElementById('upload-message').style.display = 'block';
             }
         }
 
