--- a/frontend/account.html
+++ b/frontend/account.html
@@ -61,6 +61,7 @@
     </footer>
 
     <script>
+        // Fetch and display account info
         async function fetchAccountInfo() {
             const token = localStorage.getItem('token')?.trim();
             if (!token) {
@@ -97,6 +98,7 @@
             }
         }
 
+        // Handle profile picture upload
         document.getElementById('upload-input').addEventListener('change', async (e) => {
             const file = e.target.files[0];
             if (!file) {
@@ -128,7 +130,7 @@
                     document.getElementById('profile-pic').src = profilePicture;
                     alert("Profile picture updated successfully!");
                 } else {
-                    const errorData = await response.text();
+                    const errorData = await response.json();
                     console.error("Error uploading profile picture:", errorData);
                     alert("Error uploading profile picture. Please try again.");
                 }
@@ -138,12 +140,14 @@
             }
         });
 
+        // Handle logout
         document.getElementById('logout-button').addEventListener('click', () => {
             localStorage.removeItem('token');
             alert("You have successfully logged out.");
             window.location.href = 'login.html';
         });
 
+        // Load account info on page load
         fetchAccountInfo();
     </script>
 </body>
