--- a/frontend/profile_edit.html
+++ b/frontend/profile_edit.html
@@ -35,7 +35,7 @@
                 <img id="profile-pic" src="images/default-profile.png" alt="Profile Picture" class="profile-img">
                 <form id="upload-form">
                     <input type="file" id="profile-picture" name="profilePicture" accept="image/*">
-                    <button type="button" onclick="uploadProfilePicture()">Upload Picture</button>
+                    <button type="button" id="upload-button">Upload Picture</button>
                 </form>
                 <p id="upload-message" class="success-message" style="display: none;"></p>
             </div>
@@ -67,7 +67,6 @@
     </footer>
 
     <script>
-        // Handle dynamic navigation for login/logout
         document.addEventListener("DOMContentLoaded", () => {
             const token = localStorage.getItem("token")?.trim();
             const accountTab = document.getElementById("account-tab");
@@ -90,7 +89,6 @@
             }
         });
 
-        // Load user profile information
         async function loadProfile() {
             const token = localStorage.getItem('token')?.trim();
             if (!token) {
@@ -123,7 +121,43 @@
             }
         }
 
-        // Update profile information
+        async function uploadProfilePicture() {
+            const token = localStorage.getItem('token')?.trim();
+            const profilePicture = document.getElementById('profile-picture').files[0];
+
+            if (!token || !profilePicture) {
+                alert("Please select a file to upload.");
+                return;
+            }
+
+            const formData = new FormData();
+            formData.append('profilePicture', profilePicture);
+
+            try {
+                console.log("Uploading file:", profilePicture.name);
+                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/upload-profile-picture', {
+                    method: 'POST',
+                    headers: { Authorization: `Bearer ${token}` },
+                    body: formData,
+                });
+
+                if (response.ok) {
+                    const data = await response.json();
+                    document.getElementById('profile-pic').src = data.profilePicture;
+                    alert("Profile picture uploaded successfully!");
+                } else {
+                    const error = await response.json();
+                    console.error("Error response:", error);
+                    alert("Error uploading profile picture: " + error.message);
+                }
+            } catch (error) {
+                console.error("Error uploading profile picture:", error);
+                alert("Error uploading profile picture. Please try again.");
+            }
+        }
+
+        document.getElementById('upload-button').addEventListener('click', uploadProfilePicture);
+
         async function updateProfile() {
             const username = document.getElementById('username').value.trim();
             const email = document.getElementById('email').value.trim();
@@ -145,63 +179,25 @@
                 });
 
                 if (response.ok) {
-                    document.getElementById('success-message').textContent = "Profile updated successfully!";
-                    document.getElementById('success-message').style.display = "block";
-                    setTimeout(() => {
-                        window.location.href = "account.html";
-                    }, 2000);
+                    alert("Profile updated successfully!");
+                    window.location.href = "account.html";
                 } else {
                     const errorData = await response.json();
-                    document.getElementById('error-message').textContent = errorData.message || "Error updating profile.";
-                    document.getElementById('error-message').style.display = "block";
+                    console.error("Error response:", errorData);
+                    alert(errorData.message || "Error updating profile.");
                 }
             } catch (error) {
                 console.error("Error updating profile:", error);
-                document.getElementById('error-message').textContent = "Error updating profile. Please try again.";
-                document.getElementById('error-message').style.display = "block";
+                alert("Error updating profile. Please try again.");
             }
         }
 
-        // Upload profile picture
-        async function uploadProfilePicture() {
-            const token = localStorage.getItem('token')?.trim();
-            const profilePicture = document.getElementById('profile-picture').files[0];
-
-            if (!token || !profilePicture) {
-                alert("Please select a file to upload.");
-                return;
-            }
-
-            const formData = new FormData();
-            formData.append('profilePicture', profilePicture);
-
-            try {
-                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/upload-profile-picture', {
-                    method: 'POST',
-                    headers: { Authorization: `Bearer ${token}` },
-                    body: formData,
-                });
-
-                if (response.ok) {
-                    alert("Profile picture uploaded successfully!");
-                    loadProfile(); // Refresh profile picture
-                } else {
-                    alert("Error uploading profile picture.");
-                }
-            } catch (error) {
-                console.error("Error uploading profile picture:", error);
-                alert("Error uploading profile picture. Please try again.");
-            }
-        }
-
-        // Load profile data on page load
-        loadProfile();
-
-        // Form submission for profile update
         document.getElementById('profile-form').addEventListener('submit', (e) => {
             e.preventDefault();
             updateProfile();
         });
+
+        loadProfile();
     </script>
 </body>
 </html>
