--- a/frontend/profile_edit.html
+++ b/frontend/profile_edit.html
@@ -135,9 +135,13 @@
 
             try {
                 console.log("Uploading file:", profilePicture.name);
+                console.log("Token sent with request:", token); // Debugging log
+
                 const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/upload-profile-picture', {
                     method: 'POST',
-                    headers: { Authorization: `Bearer ${token}` },
+                    headers: {
+                        Authorization: `Bearer ${token}`,
+                    },
                     body: formData,
                 });
 
@@ -148,7 +152,7 @@
                 } else {
                     const error = await response.json();
                     console.error("Error response:", error);
-                    alert("Error uploading profile picture: " + error.message);
+                    alert("Error uploading profile picture: " + (error.message || "Unknown error"));
                 }
             } catch (error) {
                 console.error("Error uploading profile picture:", error);
